Use VS 2017 compatible version of Telemetry

--- a/src/GitHub.VisualStudio/GitHub.VisualStudio.csproj
+++ b/src/GitHub.VisualStudio/GitHub.VisualStudio.csproj
@@ -297,7 +297,7 @@
   <ItemGroup>
     <PackageReference Include="Madskristensen.VisualStudio.SDK" Version="14.3.75-pre" />
     <PackageReference Include="Microsoft.VisualStudio.Telemetry">
-      <Version>16.0.233</Version>
+      <Version>15.0.691-master31907920</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VSSDK.BuildTools">
       <Version>15.8.3252</Version>
